--- a/workshop/efs-pvc.yaml
+++ b/workshop/efs-pvc.yaml
@@ -19,7 +19,7 @@ spec:
   storageClassName: efs-sc
   csi:
     driver: efs.csi.aws.com
-    volumeHandle: EFS_VOLUME_ID
+    volumeHandle: fs-03d29b01ee09bebe9
 
 ---
 apiVersion: v1
